[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Models/Components/Series1/Base/base1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Models/Allonian/Scripts/Allonian.gd" type="Script" id=4]

[sub_resource type="CapsuleShape" id=1]
radius = 0.890763
height = 0.428581

[node name="Allonian" type="KinematicBody" groups=["Allonian"]]
script = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.0588236, 0.889102, 0.108102 )
shape = SubResource( 1 )

[node name="base1" parent="." instance=ExtResource( 2 )]
transform = Transform( -1, 3.82137e-15, 8.74228e-08, -3.82137e-15, 1, -8.74228e-08, -8.74228e-08, -8.74228e-08, -1, 0, -0.286065, 0 )

[node name="BoneAttachment" parent="base1/Armature/Skeleton" index="0"]
transform = Transform( 1, -2.38419e-07, 8.74229e-08, -8.74229e-08, -7.91624e-09, 1, -2.38419e-07, -1, -7.91624e-09, 8.11251e-15, 0.588809, -0.115242 )

[node name="change_mind" type="Timer" parent="."]
wait_time = 10.0

[node name="Camera" type="Camera" parent="."]
transform = Transform( -0.922511, -1.20282e-08, 0.38597, 0.0187671, 0.998817, 0.0448554, -0.385514, 0.0486232, -0.92142, 0.272001, 1.58659, -4.07276 )
near = 0.76

[connection signal="animation_changed" from="base1/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_changed"]
[connection signal="animation_finished" from="base1/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="base1/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="timeout" from="change_mind" to="." method="_on_change_mind_timeout"]

[editable path="base1"]
